@@ -19,3 +19,4 @@ garcondumonde@riseup.net
 Martin Krafft madduck@debian.org -- admingroup patch
 Anarcat
 rhatto
+Robert Napier -- improved RPM build
